# SimMap

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  README.md
cmake/: AddEigen3.cmake  AddGoogleTest.cmake  AddOdrLib.cmake  GenerateDocs.cmake  ModuleGrpc.cmake  ModuleGtest.cmake  ModuleProtobuf.cmake
doc/: Doxyfile
docs/: Doxyfile.in
include/SimMap/: lib.h  types.h
include/base/: definitions.h  functions.h  m_assert.h  nestedseq.h  poly1.h  sequence.h
include/curve/: Curve.h  Poly3.h
include/graph/: Edge.h  Graph.h  Neighbored.h  Object.h  Oriented.h  Path.h  Vertex.h
include/server/: LaneEdge.h  LaneSeparation.h  Map.h  MapCoordinate.h  Track.h
include/simmap/: lib.h  simmap.h  simmap_types.h  types.h
lib/Spiral/: CMakeLists.txt  readme.txt
lib/Spiral/include/odrSpiral/: odrSpiral.h
lib/Spiral/src/: CMakeLists.txt  main.c  odrSpiral.c
src/: CMakeLists.txt
src/SimMap/: CMakeLists.txt  simmap_lib.cpp
src/base/: definitions.h  functions.h  nestedseq.h  poly1.h  sequence.h  sequence_types.h
src/curve/: Arc.h  C3Spline.cpp  C3Spline.h  CMakeLists.txt  Curve.cpp  Curve.h  GeoElement.cpp  GeoElement.h  Line.h  Poly3.h  Spiral.cpp  Spiral.h  odrSpiral.cpp
src/exporter/: CMakeLists.txt  main.cpp
src/gRPCmap/: simmap.proto
src/graph/: CMakeLists.txt  Edge.cpp  Edge.h  Graph.cpp  Graph.h  Neighbored.cpp  Neighbored.h  Object.h  Oriented.cpp  Oriented.h  Path.cpp  Path.h  Vertex.cpp
src/mapserver/: AgentEnvironmentSrv.h  CMakeLists.txt  main.cpp  simmap.proto
src/odradapter/: CMakeLists.txt  LaneSection.h  LaneSectionSequence.cpp  LaneSectionSequence.h  ODRAdapter.cpp  ODRAdapter.h  ODREdge.cpp  ODREdge.h  ODRJunction.h  ODRObject.h  ODRRoad.h  ODRRoadMarking.h  _parseCurve.cpp  _parseJunction.cpp  _parseLane.cpp  _parseLaneOffset.cpp  _parseLaneSections.cpp  _parseLinks.cpp  _parseRoadMarking.cpp  _parseSignals.cpp
src/server/: CMakeLists.txt  LaneEdge.cpp  LaneEdge.h  LaneSeparation.h  Map.h  MapCoordinate.cpp  MapCoordinate.h  Path.cpp  Path.h  Track.cpp  Track.h
src/simmap/: CMakeLists.txt  simmap.cpp  simmap_lib.cpp
test/: CMakeLists.txt
test/base/: CMakeLists.txt  FunctionsTest.cpp  NestedSequenceTest.cpp  PolyTest.cpp  SequenceTest.cpp
test/curve/: CMakeLists.txt  CurveTest.cpp  SplineTest.cpp
test/graph/: BasicPathTest.cpp  CMakeLists.txt  NeighbordTest.cpp  OrientedTest.cpp
test/odrapater/: AdapterTest.cpp  CMakeLists.txt  EdgeTest.cpp  JunctionTest.cpp  LaneSectionTest.cpp  LaneSeparationTest.cpp  PathTest.cpp  SimplePathTest.cpp  prep_special.h
test/simmap/: CMakeLists.txt  LibTest.cpp  LoadLibTest.cpp  SpeedTest.cpp
test/tracks/: CircleR100.xodr  KA-Suedtangente-atlatec-Roadshape.xodr  LaneSections.xodr  LaneSectionsScheme.txt  Straight10000.xodr  example_simple.xodr  intersection_final.xodr  junction1.xodr
tests/: CMakeLists.txt
tests/SimMap/: CMakeLists.txt  LibTest.cpp  LoadLibTest.cpp  SpeedTest.cpp
tests/base/: CMakeLists.txt  FunctionsTest.cpp  NestedSequenceTest.cpp  PolyTest.cpp  SequenceTest.cpp
tests/curve/: CMakeLists.txt  CurveTest.cpp  SplineTest.cpp
tests/graph/: BasicPathTest.cpp  CMakeLists.txt  GraphTest.cpp  NeighbordTest.cpp  OrientedTest.cpp
tests/odrapater/: AdapterTest.cpp  CMakeLists.txt  EdgeTest.cpp  JunctionTest.cpp  LaneSectionTest.cpp  LaneSeparationTest.cpp  PathTest.cpp  SimplePathTest.cpp  prep_special.h
tests/simmap/: CMakeLists.txt  LibTest.cpp  LoadLibTest.cpp  SpeedTest.cpp
tests/tools/html/: index.html
tests/tools/python/: plot.py
tests/tracks/: LaneSectionsScheme.txt  Straight1000.xodr  Straight10000.xodr  junction1.xodr  map.xodr
tools/html/: index.html
tools/python/: plot.py
